[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "qtlm"
authors = [{ name = "Nicolas Vetsch", email = "vetschn@iis.ee.ethz.ch" }]
description = "Quantum transport through 2D layered materials"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "mpi4py",
    "scipy",
    "threadpoolctl",
    "typer",
    "pydantic",
]

[project.optional-dependencies]
gpu = ["cupy"]


[project.urls]
Code = "https://github.com/vetschn/qtlm"

[tool.setuptools.dynamic]
version = { attr = "qtlm.__about__.__version__" }

[project.scripts]
qtlm = "qtlm.cli:run"
